--- a/PulseBridge.Scheduler/Dockerfile
+++ b/PulseBridge.Scheduler/Dockerfile
@@ -1,30 +1,23 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
-FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-USER $APP_UID
-WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
-
-
-# This stage is used to build the service project
+# 1) Build
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["QuartzNet.Scheduler/QuartzNet.Scheduler.csproj", "QuartzNet.Scheduler/"]
-RUN dotnet restore "./QuartzNet.Scheduler/QuartzNet.Scheduler.csproj"
 COPY . .
-WORKDIR "/src/QuartzNet.Scheduler"
-RUN dotnet build "./QuartzNet.Scheduler.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet publish -c Release -o /app/out
 
-# This stage is used to publish the service project to be copied to the final stage
-FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./QuartzNet.Scheduler.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
-
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
-FROM base AS final
+# 2) Runtime
+FROM mcr.microsoft.com/dotnet/aspnet:9.0
 WORKDIR /app
-COPY --from=publish /app/publish .
+
+# Create non-root user
+RUN useradd -m appuser
+USER appuser
+
+ENV ASPNETCORE_URLS=http://+:8080
+EXPOSE 8080
+
+COPY --from=build /app/out ./
+
+# Optional: container-level health probe (expects /health endpoint)
+HEALTHCHECK --interval=30s --timeout=3s CMD wget -qO- http://127.0.0.1:8080/health || exit 1
+
 ENTRYPOINT ["dotnet", "QuartzNet.Scheduler.dll"]
