updated docker files

--- a/PulseBridge.Api/Dockerfile
+++ b/PulseBridge.Api/Dockerfile
@@ -1,6 +1,15 @@
 # 1) Build
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
+
+# Copy project files ONLY (better restore cache)
+COPY /PulseBridge.Contracts/*.csproj src/PulseBridge.Contracts/
+COPY /PulseBridge.Infrastructure/*.csproj src/PulseBridge.Infrastructure/
+COPY /PulseBridge.Api/*.csproj src/PulseBridge.Api/
+
+# Restore using the project (pulls transitive refs automatically)
+RUN dotnet restore src/PulseBridge.Api/PulseBridge.Api.csproj --nologo
+
 COPY . .
 RUN dotnet publish -c Release -o /app/out
 
@@ -12,8 +21,8 @@ WORKDIR /app
 RUN useradd -m appuser
 USER appuser
 
-ENV ASPNETCORE_URLS=http://+:8080
-EXPOSE 8080
+# ENV ASPNETCORE_URLS=http://+:8080
+# EXPOSE 8080
 
 COPY --from=build /app/out ./
 
