--- a/PulseBridge.Scheduler/Dockerfile
+++ b/PulseBridge.Scheduler/Dockerfile
@@ -1,6 +1,17 @@
 # 1) Build
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
+
+RUN echo "== at / ==" && ls -la / && echo "== API project ==" && ls -la /
+
+# Copy project files ONLY (better restore cache)
+COPY /PulseBridge.Contracts/*.csproj src/PulseBridge.Contracts/
+COPY /PulseBridge.Infrastructure/*.csproj src/PulseBridge.Infrastructure/
+COPY /PulseBridge.Scheduler/*.csproj src/PulseBridge.Scheduler/
+
+# Restore using the project (pulls transitive refs automatically)
+RUN dotnet restore src/PulseBridge.Scheduler/PulseBridge.Scheduler.csproj --nologo
+
 COPY . .
 RUN dotnet publish -c Release -o /app/out
 
@@ -12,12 +23,12 @@ WORKDIR /app
 RUN useradd -m appuser
 USER appuser
 
-ENV ASPNETCORE_URLS=http://+:8080
-EXPOSE 8080
+# ENV ASPNETCORE_URLS=http://+:8080
+# EXPOSE 8080
 
 COPY --from=build /app/out ./
 
 # Optional: container-level health probe (expects /health endpoint)
 HEALTHCHECK --interval=30s --timeout=3s CMD wget -qO- http://127.0.0.1:8080/health || exit 1
 
-ENTRYPOINT ["dotnet", "QuartzNet.Scheduler.dll"]
+ENTRYPOINT ["dotnet", "PulseBridge.Scheduler.dll"]
