--- a/PulseBridge.Api/PulseBridge.Api.csproj
+++ b/PulseBridge.Api/PulseBridge.Api.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PulseBridge.Contracts\PulseBridge.Contracts.csproj" />
+    <ProjectReference Include="..\PulseBridge.Infrastructure\PulseBridge.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
