--- a/PulseBridge.Web/package.json
+++ b/PulseBridge.Web/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --host=127.0.0.1",
     "build": "ng build",
+    "build:prod": "ng build -c prod --output-path=build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
