--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,36 +2,117 @@
 
 name: pulse-bridge
 
+x-env: &app-env
+  ASPNETCORE_ENVIRONMENT: Development
+  ASPNETCORE_URLS: http://0.0.0.0:8080
+  # App settings (override via .env)
+  ConnectionStrings__Default: ${DB_CONN}
+  Redis__ConnectionString: ${REDIS_CONN}
+  MessageBroker__Host: rabbitmq
+  MessageBroker__Username: ${RABBITMQ_USER}
+  MessageBroker__Password: ${RABBITMQ_PASS}
+  # SignalR backplane
+  SignalR__UseRedisBackplane: "true"
+
+networks:
+  edge_net: { driver: bridge }
+  app_net: { driver: bridge, internal: true }
+  data_net: { driver: bridge, internal: true }
+
 services:
+  traefik:
+    image: traefik:v3.1
+    command:
+      - --api.dashboard=true
+      - --providers.docker=true
+      - --providers.docker.exposedbydefault=false
+      - --entrypoints.web.address=:80
+      # For local HTTPS, uncomment and provide certs
+      # - --entrypoints.websecure.address=:443
+    ports:
+      - "8080:8080"
+      # - "443:443"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    networks: [edge_net, app_net]
+    healthcheck:
+      test: ["CMD", "traefik", "healthcheck"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   web:
     build:
-      context: ./PulseBridge.Web         # <-- path to your Angular app folder
-      dockerfile: Dockerfile
+      context: .         # <-- path to your Angular app folder
+      dockerfile: PulseBridge.Web/Dockerfile
       args:
         CONFIG: production           # optional: angular build config
         BASE_HREF: /                 # optional: base href
     image: pulse-bridge-web:1.0
     container_name: pulse-bridge-web
     ports:
-      - "8081:80"                    # browse SPA at http://localhost:8081
+      - "8081:8081"                    # browse SPA at http://localhost:8081
     depends_on:
       - api
     restart: unless-stopped
 
   api:
+    build:
+      context: .         # <-- path to your Api app folder
+      dockerfile: PulseBridge.Api/Dockerfile
     image: pulse-bridge-api:1.0
     container_name: pulse-bridge-api
     ports:
-      - "8080:8081"
-    environment:
-      ASPNETCORE_ENVIRONMENT: Production
-      # Read from .env file below
-      ConnectionStrings__Default: ${DB_CONN}
-      Cache__ConnectionString: ${REDIS_CONN}
+      - "8082:8082"                    # optional: expose for direct access (dev only)
+    environment: *app-env
     depends_on:
       - sql
       - redis
+    networks: [app_net, data_net]
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.api.rule=Host(`api.localtest.me`)
+      - traefik.http.routers.api.entrypoints=web
+      - traefik.http.services.api.loadbalancer.server.port=8080
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:8082/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
     restart: unless-stopped
+
+  worker:
+    build:
+      context: .         
+      dockerfile: PulseBridge.Worker/Dockerfile
+    environment: *app-env
+    depends_on:
+      - rabbitmq
+      - api
+    networks: [app_net, data_net]
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:8083/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+
+  scheduler:
+    build:
+      context: .         
+      dockerfile: PulseBridge.Scheduler/Dockerfile
+    environment:
+      <<: *app-env
+      Quartz__JobStore: AdoNet
+      Quartz__ConnectionString: ${DB_CONN}
+    depends_on:
+      - sql
+      - rabbitmq
+    networks: [app_net, data_net]
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:8084/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
 
   sql:
     image: mcr.microsoft.com/mssql/server:2022-latest
@@ -40,21 +121,47 @@ services:
       ACCEPT_EULA: "Y"
       SA_PASSWORD: ${SA_PASSWORD}
       MSSQL_PID: "Developer"
-    #ports:
-      #- "1433:1433"   # only expose if you really need external access
+    networks: [data_net]
+    ports:
+      - "1433:1433"   # only expose if you really need external access (for dev only)
     volumes:
       - mssqldata:/var/opt/mssql
     restart: unless-stopped
 
   redis:
     image: redis:7.2
+    command: ["redis-server", "--appendonly", "yes"]
     container_name: pulse-bridge-redis
-    #ports:
-      #- "6379:6379"   # same note: expose only if needed
+    networks: [data_net]
+    ports:
+      - "6379:6379"   # same note: expose only if needed (for dev only)
     volumes:
       - redisdata:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+    restart: unless-stopped
+
+  rabbitmq:
+    image: rabbitmq:3.13-management
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASS}
+    networks: [data_net]
+    ports:
+      - "15672:15672" # mgmt UI (dev only)
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "-q", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
     restart: unless-stopped
 
 volumes:
   mssqldata:
   redisdata:
+  rabbitmq_data:
