--- a/PulseBridge.Worker/appsettings.json
+++ b/PulseBridge.Worker/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "App": {
+    "ClaimBatchSize": 25,
+    "MaxPublishConcurrency": 15,
+    "WorkerGroup": "App",
+    "IntervalInSeconds": 30,
+    "SendAndReceiveUrl": "api/external/SendAndReceiveApiUrl"
+  },
   "AllowedHosts": "*"
 }
