--- a/PulseBridge.Worker/appsettings.json
+++ b/PulseBridge.Worker/appsettings.json
@@ -5,6 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "QuartzNet": "Server=FBASA;Database=QuartzNet;Integrated Security=True;TrustServerCertificate=True;"
+  },
+  "RabbitMq": {
+    "Host": "localhost",
+    "User": "unienroll",
+    "Pass": "unienroll"
+  },
   "App": {
     "ClaimBatchSize": 25,
     "MaxPublishConcurrency": 15,
