--- a/PulseBridge.Web/package.json
+++ b/PulseBridge.Web/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host=127.0.0.1",
+    "start": "ng serve --port 4200 -o",
     "build": "ng build",
     "build:prod": "ng build -c prod --output-path=build",
     "watch": "ng build --watch --configuration development",
