--- a/PulseBridge.Scheduler/PulseBridge.Scheduler.csproj
+++ b/PulseBridge.Scheduler/PulseBridge.Scheduler.csproj
@@ -11,6 +11,8 @@
   <ItemGroup>
     <PackageReference Include="MassTransit" Version="8.5.2" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
     <PackageReference Include="Quartz" Version="3.15.0" />
     <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.15.0" />
@@ -21,6 +23,12 @@
   <ItemGroup>
     <ProjectReference Include="..\PulseBridge.Contracts\PulseBridge.Contracts.csproj" />
     <ProjectReference Include="..\PulseBridge.Infrastructure\PulseBridge.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="QuartzSchema.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
