--- a/PulseBridge.Worker/appsettings.json
+++ b/PulseBridge.Worker/appsettings.json
@@ -18,7 +18,7 @@
     "MaxPublishConcurrency": 15,
     "WorkerGroup": "App",
     "IntervalInSeconds": 30,
-    "SendAndReceiveUrl": "https://localhost:7001/api/external/send"
+    "SendAndReceiveUrl": "http://localhost:8082/api/external/send"
   },
   "AllowedHosts": "*"
 }
