--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,11 +122,8 @@ services:
       ACCEPT_EULA: "Y"  # Required to run MSSQL
       SA_PASSWORD: ${SA_PASSWORD}  # SA password from .env
       MSSQL_PID: "Developer"  # Free dev edition
-    networks: 
-      - edge_net  # dev only: reachable from host
-      - data_net  # Reachable from host and data tier
-    ports:
-      - "1433:1433"   # Map DB port to host (dev only)
+    networks: [data_net]  # Internal data tier only
+    # No published ports: internal-only (not reachable from host)
     volumes:
       - mssqldata:/var/opt/mssql  
     restart: unless-stopped  
